# decent-profile-viewer

./: .gitattributes  .gitignore  Cargo.toml  index.html
.github/workflows/: apply-tf-prd.yml  cache.yml  check-backend.yml  check-infra.yml  check-web.yml  deploy-backend-prd.yml  deploy-infra-prd.yml  deploy-web-prd.yml  playwright.yml
assets/: font.css
backend/: Cargo.toml  Dockerfile
backend/e2e/: .prettierrc.yml  package-lock.json  package.json  playwright.config.ts  prepare.sh
backend/e2e/tests/: api.spec.ts
backend/src/: main.rs
src/: main.rs  prelude.rs  routes.rs
src/components/: axis.rs  graph.rs  heading.rs  link.rs  logo.rs  mod.rs  page.rs  preset_item.rs  preset_list.rs  title.rs
src/lib/: mod.rs  parser.rs  profile.rs  scale.rs
src/pages/: about.rs  mod.rs  presets.rs  viewer.rs
src/pages/errors/: mod.rs  not_found.rs
src/pages/presets/: index.rs  mod.rs
terraform/: .terraform.lock.hcl  main.tf  prd.tfvars.json
web/: Cargo.toml
web/assets/: font.css
web/fixtures/: profile.tcl  step.inner  step.outer  steps.inner
web/src/components/: content.rs  description.rs  heading.rs  logo.rs  mod.rs  preset_item.rs  title.rs
web/src/lib/: parser.rs  profile.rs  scale.rs
web/src/pages/: about.rs  mod.rs  presets.rs  viewer.rs
