[package]
name = "profile-viewer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.17"
futures = "0.3.28"
reqwest = { version = "0.11.18", features = ["rustls-tls"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version="0.3.17", features = ["env-filter"] }
