[package]
name = "profile-viewer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.17"
futures = "0.3.30"
reqwest = { version = "0.11.22", features = ["rustls-tls"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version="0.3.17", features = ["env-filter"] }
