[package]
name = "decent-profile-viewer"
version = "0.1.0"
authors = ["Yuki Kodama <endflow.net@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
gloo-utils = "0.1.4"
include_dir = "0.7.2"
log = "0.4.17"
nom = "7.1.1"
once_cell = "1.12.0"
serde = { version = "1.0.138", features = ["derive"] }
stylist = { version = "0.10.1", features = ["yew"] }
wasm-logger = "0.2.0"
yew = "0.19.3"
yew-router = "0.16.0"
