[package]
name = "decent-profile-viewer"
version = "0.1.0"
authors = ["Yuki Kodama <endflow.net@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
gloo-utils = "0.2.0"
include_dir = "0.7.3"
log = "0.4.20"
nom = "7.1.3"
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
stylist = { version = "0.12.0", features = ["yew"] }
wasm-logger = "0.2.0"
yew = "0.21.0"
yew-router = "0.16.0"
